<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dhana.newsfeedapp.ui.home.NewsFeedFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_feedFragment_to_DetailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />


    </fragment>

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.dhana.newsfeedapp.ui.favorite.SavedfavouriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dhana.newsfeedapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_favoriteSettings_to_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.dhana.newsfeedapp.ui.details.ViewNewsFragment"
        android:label="@string/details">

        <argument
            android:name="news"
            app:argType="com.dhana.newsfeedapp.data.model.NewsArticle" />
    </fragment>
</navigation>