<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <ImageView
        android:id="@+id/ivArticleImage"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="6dp"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
        app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPublishedAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/published_at"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ivArticleImage"
        app:layout_constraintStart_toEndOf="@+id/ivArticleImage"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="6"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivArticleImage" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/margin_5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>


</androidx.constraintlayout.widget.ConstraintLayout>